--- a/frontend/style.css
+++ b/frontend/style.css
@@ -74,6 +74,7 @@
     .book{
       display: flex;
       justify-content: space-between;
+      align-items: center;
       width: 500px;
       margin-bottom: 20px;
     }
